--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -1,16 +1,16 @@
-name: Ian Li
+name: Mengxu Yuan
 
 label: UI Designer
 
 picture: /img/profile-picture.jpg
 
-email: ianli@ianli.com
+email: myuan89@uwo.ca
 
 phone: 
 
 department: Android UX
 
-institution: Google
+institution: Western University, CA
 
 mailing_address: >
   1600 Amphitheatre Parkway
