--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -1,44 +1,38 @@
-name: Mengxu Yuan
+# 你的个人信息 (Personal information)
+[cite_start]name: Mengxu YUAN [cite: 1]
+label: PhD Candidate | [cite_start]Department of Mathematics [cite: 7]
+picture: /img/profile-picture.jpg # <--- 需要你补充
+[cite_start]email: myuan89@uwo.ca [cite: 2]
+[cite_start]phone: "+1-437-661-3920" [cite: 3]
+[cite_start]department: Department of Mathematics [cite: 7]
+[cite_start]institution: University of Western Ontario, London, ON [cite: 7]
 
-label: UI Designer
-
-picture: /img/profile-picture.jpg
-
-email: myuan89@uwo.ca
-
-phone: 
-
-department: Android UX
-
-institution: Western University, CA
-
+# 你的邮寄地址 (Mailing address)
+# (你可以留空，或者填写UWO数学系的公开地址)
 mailing_address: >
-  1600 Amphitheatre Parkway
-  Mountain View, CA 94043
+  # 例如: Middlesex College
+  # 1151 Richmond St
+  # London, ON N6A 5B7 # <--- 需要你补充
 
+# 你的社交/学术网络链接 (Social media profiles)
 profiles:
-  - 
-    network: Google Scholar
-    username:
-    url: http://scholar.google.com/citations?user=JS7sVyQAAAAJ&hl=en
   -
     network: LinkedIn
-    username:
-    url: https://www.linkedin.com/pub/ian-li/1/681/8b0
+    username: mengxu-yuan
+    [cite_start]url: https://www.linkedin.com/in/mengxu-yuan [cite: 4]
   -
-    network: Twitter
-    username: ianli
-    url: https://twitter.com/ianli/
+    network: Google Scholar
+    username: # <--- 需要你补充
+    url: # <--- 需要你补充 (例如: http://scholar.google.com/...)
+  # -
+  #   network: Twitter
+  #   username: # <--- 需要你补充
+  #   url: # <--- 需要你补充
 
+# 网站首页的个人简介 (Introduction)
 intro:
   title: Hello!
   body: >
-    I'm a UI designer at Google.
-    Before Google, I was a Ph.D. student in the 
-    [Human-Computer Interaction Institute](http://hcii.cs.cmu.edu/) at Carnegie Mellon University.
-    My advisors were 
-    [Anind Dey](http://www.cs.cmu.edu/~anind/) and 
-    [Jodi Forlizzi](http://goodgestreet.com/). 
-    I worked on designed and developed 
-    [personal informatics tools](http://www.personalinformatics.org/) that help people better understand their own behavior.
-    [My dissertation](http://ianli.com/thesis/) explored how contextual information can improve self-knowledge in personal informatics systems.
+    I am a PhD student in the Department of Mathematics at the University of Western Ontario[cite: 7].
+    My supervisor is Dr. Hristo Sendov[cite: 7].
+    I completed my M.Sc. in Pure Mathematics at Western (2024-2025) [cite: 9] and my B.Sc. in Information and Computing Science at Wuhan University of Technology (2020-2024)[cite: 12, 13].
