--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -3,15 +3,13 @@ name: Mengxu YUAN
 label: PhD Candidate | Department of Mathematics
 picture: /img/profile-picture.jpg # <--- 仍然需要你补充
 email: myuan89@uwo.ca
-phone: "+1-437-661-3920"
+phone: " "
 department: Department of Mathematics
 institution: University of Western Ontario, London, ON
 
 # 你的邮寄地址 (Mailing address)
 mailing_address: >
-  MC 102, Middlesex College
-  1151 Richmond St
-  London, ON N6A 5B7
+  MC 102, Middlesex College, 1151 Richmond St, London, ON N6A 3K7
 
 # 你的社交/学术网络链接 (Social media profiles)
 profiles:
