--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -1,6 +1,6 @@
 # 你的个人信息 (Personal information)
 name: Mengxu YUAN
-label: PhD Candidate | Department of Mathematics
+label: PhD student | Department of Mathematics
 picture: /img/profile-picture.jpg # <--- 仍然需要你补充
 email: myuan89@uwo.ca
 phone: " "
