Modify label and update education details
Updated personal information in YAML file.

--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -1,5 +1,5 @@
 name: Mengxu YUAN
-label: PhD student | Department of Mathematics
+label: Department of Mathematics Western University, CA
 picture: /img/profile-picture.jpg # <--- 仍然需要你补充
 email: myuan89@uwo.ca
 phone: " "
